--- a/index.html
+++ b/index.html
@@ -220,6 +220,30 @@
                 alt="image"
                 class="form-decor-item"
               />
+              <div class="form-checkbox-input">
+                <label>Тип поиска</label>
+                <div class="form-checkbox-option">
+                  <input
+                    type="checkbox"
+                    id="checkbox1"
+                    name="checkbox1"
+                    checked
+                  />
+                  <label for="checkbox1">Простой поиск</label>
+                </div>
+                <div class="form-checkbox-option">
+                  <input type="checkbox" id="checkbox2" name="checkbox1" />
+                  <label for="checkbox2">Простой поиск</label>
+                </div>
+                <div class="form-checkbox-option">
+                  <input type="checkbox" id="checkbox3" name="checkbox1" />
+                  <label for="checkbox3">Простой поиск</label>
+                </div>
+                <div class="form-checkbox-option">
+                  <input type="checkbox" id="checkbox4" name="checkbox1" />
+                  <label for="checkbox4">Простой поиск</label>
+                </div>
+              </div>
               <div class="form-radio-input">
                 <label>Тип поиска</label>
                 <div class="form-radio-option">
@@ -277,7 +301,7 @@
               </div>
               <div class="form-input">
                 <label>ИНН</label>
-                <input type="number" />
+                <input type="number" class="error" />
               </div>
               <div class="form-input">
                 <label>Номер дела</label>
