--- a/index.html
+++ b/index.html
@@ -197,9 +197,8 @@
                   с информацией, находящейся в открытом доступе на данном сайте.
                 </p>
                 <p>
-                  Для подключения к сервису напишите на email:
+                  Для подключения к сервису напишите на email:<br />
                   <a href="mailto:support@parser-api.com" class="mail-link">
-                    <img src="./img/mail-icon.svg" alt="icon" />
                     support@parser-api.com</a
                   >
                 </p>
