--- a/loader.html
+++ b/loader.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <div class="loader">
-        <div class="loader-pie" style="--p: 0">
+        <div class="loader-pie">
           Загрузка<span>.</span><span>.</span><span>.</span>
         </div>
       </div>
