--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                   с информацией, находящейся в открытом доступе на данном сайте.
                 </p>
                 <p>
-                  Для подключения к сервису напишите на email:<br />
+                  Для подключения к сервису напишите на email:
                   <a href="mailto:support@parser-api.com" class="mail-link">
                     support@parser-api.com</a
                   >
